objects/Apttus__CycleTimeGroupData__c.object
<CustomObject>
    <description>Holds the data captured on groups for cycle time reporting</description>
    <fields>
        <fullName>Apttus__Agreement__c</fullName>
        <description>The agreement associated with the group</description>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Cycle Time Group Data</relationshipLabel>
        <relationshipName>Cycle_Time_Group_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus__Begin_Datetime__c</fullName>
        <description>The datetime when the field value entered the group</description>
        <label>Begin Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus__Cycle_Time_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The group associated with the cycle time data</description>
        <label>Cycle Time Group</label>
        <referenceTo>Apttus__CycleTimeGroup__c</referenceTo>
        <relationshipLabel>Cycle Time Group Data</relationshipLabel>
        <relationshipName>Cycle_Time_Group_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Duration_Business_Hours__c</fullName>
        <description>The duration (in hours) the field value remained in the group</description>
        <label>Duration (Hours)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__End_Datetime__c</fullName>
        <description>The datetime when the field value departed the group</description>
        <label>End Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus__From__c</fullName>
        <description>The field value which marks the beginning of the group</description>
        <label>From Value</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__To__c</fullName>
        <description>The field value which marks the end of the group</description>
        <label>To Value</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Cycle Time Group Data</label>
    <nameField>
        <displayFormat>CTGD-{0000000}</displayFormat>
        <label>CT Group Data</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cycle Time Group Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>